bin_PROGRAMS = hotbodies
hotbodies_SOURCES = main.cpp DoubleTextParser.cpp DoubleTextParserImpl.cpp DoubleTextParserImpl.hpp DoubleTextParserFactory.cpp DoubleTextParserFactory.hpp DoubleTextParser.hpp ImageAlgorithm.hpp Matrix.hpp ParserFactory.hpp Parser.hpp SortImageAlgorithm.hpp
hotbodies_CXXFLAGS = -std=c++0x -Wall -Wextra
